name:          DeUni
version:       0.3.3
license:       MIT
license-file:  LICENSE
author:        Edgar Gomes de Araujo
maintainer:    Edgar Gomes de Araujo <talktoedgar@gmail.com>
homepage:
stability:     Experimental
synopsis:      3D Convex Hull and Delaunay triangulation generator
description:
  3D Convex Hull and Delaunay triangulation generator based on MBC
  (Marriage Before Conquer).

cabal-version: >=1.8
build-type:    Simple
category:      Data, Math

library
  ghc-options:
    -Wall -O2 -funbox-strict-fields -fwarn-tabs -fno-warn-orphans
    -fno-warn-unused-do-bind

  hs-source-dirs:  src
  build-depends:
      base         >=4    && <5
    , containers   >=0.4
    , linear-vect  >=0.1  && <0.3
    , mtl          >=2.0
    , random       >=1.0
    , vector       >=0.10

  exposed-modules:
    DeUni.DeWall
    DeUni.Dim2.Base2D
    DeUni.Dim2.Delaunay2D
    DeUni.Dim2.ReTri2D
    DeUni.Dim3.Base3D
    DeUni.Dim3.Delaunay3D
    DeUni.Dim3.Hull3D
    DeUni.Dim3.ReTri3D
    DeUni.FirstSeed
    DeUni.GeometricTools
    DeUni.Types

test-suite DeUni-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  ghc-options:    -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Check2D
    Check3D
    CheckCommon
    RenderSVG
    VTKRender

  build-depends:
      base           >=4   && <5
    , blaze-builder  >=0.3
    , blaze-svg      >=0.1
    , bytestring     >=0.9
    , colour         >=2.3
    , containers     >=0.5
    , DeUni
    , diagrams-core  >=0.5
    , diagrams-lib   >=0.5
    , diagrams-svg   >=0.3
    , hammer         >=0.4 && <0.5
    , hspec          >=2.0
    , linear-vect
    , QuickCheck     >=2.1
    , svg-builder
    , text
    , vector         >=0.9

executable DeUni-benchmark
  hs-source-dirs: profile
  main-is:        Benchmark.hs
  ghc-options:    -O3 -threaded -rtsopts
  other-modules:  RandomGenerator
  build-depends:
      base                    >=4   && <5
    , criterion               >=0.6
    , DeUni
    , hammer                  >=0.4 && <0.5
    , mersenne-random-pure64  >=0.2
    , monad-loops             >=0.3
    , random-fu               >=0.2
    , random-source           >=0.3
    , vector                  >=0.9
